--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <app-header></app-header>
   <app-root></app-root>
   <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
